# AI_Engineer_Stub

./: .gitignore  AI_PROMPTS.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  seed.py  start.sh
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  redis_client.py  schemas.py
backend/app/api/: documents.py  health.py  query.py  tenants.py
backend/app/services/: document.py  embedding.py  llm.py  rag.py
backend/infra/: init.sql
